# AgentLimit

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  PRD.md  README.md  agentlimit_PRD.docx  pyproject.toml
.github/workflows/: test.yml
agentlimit/: __init__.py  alerts.py  cli.py  exceptions.py  meter.py  providers.py  reset.py
docs/: RELEASE_CHECKLIST.md
docs/superpowers/plans/: 2026-04-29-v1-hardening-before-release.md
docs/superpowers/specs/: 2026-04-29-v1-hardening-before-release-design.md
tests/: conftest.py  test_alerts.py  test_cli.py  test_meter.py  test_providers.py  test_reset.py
