[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlimit"
version = "0.1.0"
description = "Lightweight, self-hosted AI agent usage metering and budget enforcement"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Muhammad Raja Zahran" },
]
keywords = ["ai", "agent", "budget", "metering", "llm", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "redis>=5.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "fakeredis>=2.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
agentlimit = "agentlimit.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
